--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="html/about.html">About</a>
+                        <a href="html/about.html">О нас</a>
                     </li>
                     <li>
-                        <a href="html/services.html">Services</a>
+                        <a href="html/services.html">Сервисы</a>
                     </li>
                     <li>
-                        <a href="html/contacts.html">Contact</a>
+                        <a href="html/contacts.html">Контакты</a>
                     </li>
 					
                 </ul>
@@ -43,7 +43,7 @@
         <div class="row">
 
             <div class="col-md-3">
-                <p class="lead">*Shop Name*</p>
+                <p class="lead">Спортивное питание</p>
 				<br>
 				<h3><a href="" class="cart-link" data-toggle="modal" data-target="#Cart"> Cart </a> </h3>
             </div>
@@ -83,7 +83,7 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(1).jpg" alt="">
+                            <img src="img/goods/proteinprime.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
                                 <h4><a href="" data-toggle="modal" data-target="#FirstGoodModal">First Product</a>
