--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Shop</a>
+                <a class="navbar-brand" href="#">Магазин</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -85,12 +85,13 @@
                         <div class="thumbnail">
                             <img src="img/goods/proteinprime.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$24.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#FirstGoodModal">First Product</a>
+                                <h4 class="pull-right">2000 рублей</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#FirstGoodModal">Протеин "Primekraft" </a>
                                 </h4>
+				    <p>Протеин марки "Primekraft", рекомендован людям для набора массы.
                             </div>
                             <div class="ratings">
-                                <p class="pull-right">15 reviews</p>
+                                <p class="pull-right">20 отзывов</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
@@ -104,15 +105,15 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(2).jpg" alt="">
+                            <img src="img/goods/proteinnutr.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$64.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#SecondGoodModal">Second Product</a>
+                                <h4 class="pull-right">1899 рублей</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#SecondGoodModal">Протеин "Optimum nutrition"</a>
                                 </h4>
-                                <p>This is a short description.</p>
+                                <p>Протеин марки "Optimum nutrition", подходит для людей занимающихся спортом.</p>
                             </div>
                             <div class="ratings">
-                                <p class="pull-right">12 reviews</p>
+                                <p class="pull-right">14 отзывов</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
@@ -126,15 +127,15 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(3).jpg" alt="">
+                            <img src="img/goods/proteinsan.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$74.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#ThirdGoodModal">Third Product</a>
+                                <h4 class="pull-right">1566 рублей</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#ThirdGoodModal">Протеин марки "San"</a>
                                 </h4>
-                                <p>This is a short description.</p>
+                                <p>Протеин от фирмы "San"! Идеальный выбор начинающих атлетов.</p>
                             </div>
                             <div class="ratings">
-                                <p class="pull-right">31 reviews</p>
+                                <p class="pull-right">44 отзыва</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
