--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="col-md-3">
                 <p class="lead">Спортивное питание</p>
 				<br>
-				<h3><a href="" class="cart-link" data-toggle="modal" data-target="#Cart"> Cart </a> </h3>
+				<h3><a href="" class="cart-link" data-toggle="modal" data-target="#Cart"> Корзина </a> </h3>
             </div>
             <div class="col-md-9">
                 <div class="row carousel-holder">
