--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 	
       </div>
       <div class="modal-footer">
-	  		<button type="button" class="btn btn-default btn-close" OnClick="clearCart(); $('.cart-body').html('');"> Clear cart </button>
+	  		<button type="button" class="btn btn-default btn-close" OnClick="clearCart(); $('.cart-body').html('');"> Очистить корзину </button>
         <button type="button" class="btn btn-default btn-close" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary btn-order">Order</button>
       </div>
