--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Shop</title>
+    <title>Магазин спортивного питания "Спорт+"</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<!-- jQuery -->
@@ -59,13 +59,13 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="item active">
-                                    <img class="slide-image" src="img/800x300(1).jpg" alt="">
+                                    <img class="slide-image" src="img1slide.jpg" alt="">
                                 </div>
                                 <div class="item">
-                                    <img class="slide-image" src="img/800x300(2).jpg" alt="">
+                                    <img class="slide-image" src="img2slide.jpg" alt="">
                                 </div>
                                 <div class="item">
-                                    <img class="slide-image" src="img/800x300(3).jpg" alt="">
+                                    <img class="slide-image" src="img3slide.jpg" alt="">
                                 </div>
                             </div>
                             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -85,10 +85,10 @@
                         <div class="thumbnail">
                             <img src="img/goods/proteinprime.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">2000 рублей</h4>
                                 <h4><a href="" data-toggle="modal" data-target="#FirstGoodModal">Протеин "Primekraft" </a>
                                 </h4>
 				    <p>Протеин марки "Primekraft", рекомендован людям для набора массы.
+				<h4 class="pull-right">2000 рублей</h4>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">20 отзывов</p>
