--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                         <div class="thumbnail">
                             <img src="img/goods/proteinnutr.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">1899 рублей</h4>
                                 <h4><a href="" data-toggle="modal" data-target="#SecondGoodModal">Протеин "Optimum nutrition"</a>
                                 </h4>
                                 <p>Протеин марки "Optimum nutrition", подходит для людей занимающихся спортом.</p>
+				<h4>1899 рублей</h4>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">14 отзывов</p>
@@ -129,10 +129,10 @@
                         <div class="thumbnail">
                             <img src="img/goods/proteinsan.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">1566 рублей</h4>
                                 <h4><a href="" data-toggle="modal" data-target="#ThirdGoodModal">Протеин марки "San"</a>
                                 </h4>
                                 <p>Протеин от фирмы "San"! Идеальный выбор начинающих атлетов.</p>
+				<h4>1566 рублей</h4>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">44 отзыва</p>
@@ -151,13 +151,12 @@
                         <div class="thumbnail">
                             <img src="img/goods/320x150(4).jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$84.99</h4>
                                 <h4><a href="" data-toggle="modal" data-target="#FourthGoodModal">Fourth Product</a>
                                 </h4>
-                                <p>This is a short description.</p>
-                            </div>
+				<h4>1799 рублей</h4>
+			    </div>
                             <div class="ratings">
-                                <p class="pull-right">6 reviews</p>
+                                <p class="pull-right">10 отзывов</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
@@ -173,13 +172,13 @@
                         <div class="thumbnail">
                             <img src="img/goods/320x150(5).jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$94.99</h4>
                                 <h4><a href="" data-toggle="modal" data-target="#FifthGoodModal">Fifth Product</a>
                                 </h4>
                                 <p>This is a short description.</p>
+				<h4>1599 рублей</h4>
                             </div>
                             <div class="ratings">
-                                <p class="pull-right">18 reviews</p>
+                                <p class="pull-right">25 отзывов</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
@@ -224,7 +223,7 @@
         <h4 class="modal-title">Product1</h4>
       </div>
       <div class="modal-body">
-	  <img src="img/goods/320x150(1).jpg"
+	  <img src="img/goods/proteinprime.jpg"
         <p>*description* &hellip;</p>
 		<button class="btn-primary add-to-busket-btn"><span class="glyphicon glyphicon-shopping-cart"></span> add to cart </button>
 		<div class="add-to-busket-block">
