--- a/index.html
+++ b/index.html
@@ -149,10 +149,11 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(4).jpg" alt="">
+                            <img src="img/goods/proteinsyn.jpg" alt="">
                             <div class="caption">
-                                <h4><a href="" data-toggle="modal" data-target="#FourthGoodModal">Fourth Product</a>
+                                <h4><a href="" data-toggle="modal" data-target="#FourthGoodModal">Протеин фирмы "Syntha 6"</a>
                                 </h4>
+				<p>Протеин от фирмы "Syntha 6"! Новая формула.</p>
 				<h4>1799 рублей</h4>
 			    </div>
                             <div class="ratings">
@@ -170,11 +171,11 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(5).jpg" alt="">
+                            <img src="img/goods/proteinlab.jpg" alt="">
                             <div class="caption">
-                                <h4><a href="" data-toggle="modal" data-target="#FifthGoodModal">Fifth Product</a>
+                                <h4><a href="" data-toggle="modal" data-target="#FifthGoodModal">Протеин марки "Labrada"</a>
                                 </h4>
-                                <p>This is a short description.</p>
+                                <p>Хороший выбор опытных спортсменов. Максимально сбалансированная структура, от "Labrada"</p>
 				<h4>1599 рублей</h4>
                             </div>
                             <div class="ratings">
