--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Product1</h4>
+        <h4 class="modal-title">Протеин "Primekraft"</h4>
       </div>
       <div class="modal-body">
 	  <img src="img/goods/proteinprime.jpg"
-        <p>*description* &hellip;</p>
-		<button class="btn-primary add-to-busket-btn"><span class="glyphicon glyphicon-shopping-cart"></span> add to cart </button>
+        <p>Хороший выбор! &hellip;</p>
+		<button class="btn-primary add-to-busket-btn"><span class="glyphicon glyphicon-shopping-cart"></span>Добавить в корзину</button>
 		<div class="add-to-busket-block">
 			<button class="btn-primary btn-minus">-</button>
 			<input class="form-control count-input" />
@@ -235,8 +235,8 @@
 		</div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-close" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-default btn-close" data-dismiss="modal">Закрыть</button>
+        <button type="button" class="btn btn-primary">Сохранить изменения</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
