--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default btn-close" data-dismiss="modal">Закрыть</button>
-        <button type="button" class="btn btn-primary">Сохранить изменения</button>
+        <button type="button" class="btn btn-primary">Сохранить</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
