--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <h4 class="modal-title">Протеин "Optimum Nutrition"</h4>
       </div>
       <div class="modal-body">
-	  <img src="img/goods/proteinnutr.jpg"
+	  <img src="img/goods/proteinnutr.jpg">
         <p> Хороший выбор! &hellip;</p> 
 		<button class="btn-primary add-to-busket-btn"><span class="glyphicon glyphicon-shopping-cart"></span> Добавить в корзину </button>
 		<div class="add-to-busket-block">
